# racers-portable

./: .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml
GolDP/: library_msvc.h
GolDP/include/: amberlens0x344.h  amberlensbase0x120.h  bronzedune0x4c.h  bronzefalcon0xc8770.h  floatybuoy0x58.h  floatycanoe0x90.h  floatypontoon0x4c.h  fluffygloomkins0x118.h  gdbmodel0x48.h  gdbvertexarray0xc.h  gdbvertexarraytypetwo0x20.h  goldrawdpstate.h  greyfalconnode0x1c.h  jadeorbit0x220.h  jadeorbit0xd0.h  jadeorbitbase0x10.h  purpledune0x7c.h  silverdune0x30.h  utopianpan0xa4.h  whitebaffoon0x50.h  whitefalcon0x140.h  whitefalconnode0x18.h  zoweeblubberworth0xf0.h
GolDP/include/camera/: golcamera.h  golcamerabase.h  goltransform.h
GolDP/include/core/: gol.h  goldpexport.h
GolDP/include/font/: golfont.h  golfontlibrary.h
GolDP/include/image/: goltiledtexture.h  utopianpan0xa4.h
GolDP/include/material/: amberhaze0x20.h  goltexturelist.h  materialtable0x0c.h
GolDP/include/mesh/: golmodel.h
GolDP/include/render/: golcommondrawstate.h  gold3drenderdevice.h  gold3drenderstate.h  gold3drendersurface.h  goldrawdpstate.h  goldrawstate.h  golrenderdevice.h  golsoftwarerenderer.h
GolDP/include/scene/: golbillboard.h
GolDP/include/surface/: azureridge0x38.h  falcondunebag0x10.h  golattachedsurface.h  gold3dtexturepalette.h  golddune0x38.h  moltenquillphantom0x34.h  purpledune0x7c.h  silverdune0x30.h  slatepeak0x58.h
GolDP/include/world/: golworlddatabase.h  wdbbillboardsprite.h
GolDP/src/: amberhaze0x20.cpp  amberlens0x344.cpp  bronzedune0x4c.cpp  bronzefalcon0xc8770.cpp  bronzefalconsurface0x5c.cpp  floatybuoy0x58.cpp  floatycanoe0x90.cpp  floatyferry0xf4.cpp  floatypontoon0x4c.cpp  fluffygloomkins0x118.cpp  gdbmodel0x48.cpp  gdbmodelindexarray0xc.h  goldevicelist.cpp  golfont0xa0.cpp  golfontbase0x40.cpp  greyfalconnode0x1c.cpp  jadeorbit0xd0.cpp  jadeorbitbase0x10.cpp  purpledune0x7c.cpp  purpleribbon0x24.cpp  utopianpan0xa4.cpp  whitefalconnode0x18.cpp  zoweeblubberworth0xf0.cpp
GolDP/src/camera/: golcamera.cpp  golcamerabase.cpp  golscenetransformnode.cpp  goltransform.cpp
GolDP/src/core/: goldpexport.cpp  main.cpp
GolDP/src/device/: goldevicelist.cpp  goldirectdrawpalette.cpp
GolDP/src/font/: golfont.cpp  golfontlibrary.cpp
GolDP/src/image/: golimage.cpp  whitebaffoon0x50.cpp
LEGORacers/: library_msvc.h
LEGORacers/include/: ambermeadow0x58.h  aquamarinespirit0x3c.h  ceruleanemperor0x4c.h  ceruleanqueen0x58.h  citrinegrove0x1f4c.h  crimsonpebble0x228.h  crimsonsun0xa4.h  cutscenevent0xe4.h  garnetflare0x60.h  imaginaryaxe0x36c4.h  imaginarybelt0x2548.h  imaginarybolt0x4774.h  imaginarychisel0x658.h  imaginaryclaw0x15ec.h  imaginarycube0x3c34.h  imaginarydrillfieldat0x22dc.h  imaginarydrillfieldat0x420.h  imaginarydrillfieldat0x498.h  imaginarygear0x4c8c.h  imaginaryinterface.h  imaginarylever0x1d7c.h  imaginarynotion0x290.h  imaginaryplate0x770.h  imaginaryring0x3360.h  imaginaryruler0x2e60.h  imaginaryshape0x2b20.h  imaginarytool0x368.h  imaginarywrench0x23bc.h  legopiecelibrary.h  main.h  obscureglyph0x21c.h  obscureicon0x1a8.h  obscurelink0x1c.h  obscuresigil0xdc.h  obscurevantage0x58.h  obscurezebra0xa4.h  opalhaven0xf4.h  peridottrace0x4e0.h  peridottraceroot0x108.h  saffronquartz0x2c.h  (+8 more)
LEGORacers/src/: amberlensbase0x120.cpp  aquamarinespirit0x3c.cpp  ceruleanemperor0x4c.cpp  ceruleanqueen0x58.cpp  citrinegrove0x1f4c.cpp  crimsonpebble0x228.cpp  crimsonsun0xa4.cpp  crimsonsun0xa4entry.cpp  cutscenevent0xe4.cpp  gamemain.cpp  garnetflare0x60.cpp  gdbpartlibrary0x1c.cpp  imaginaryaxe0x36c4.cpp  imaginarybelt0x2548.cpp  imaginarybolt0x4774.cpp  imaginarychisel0x658.cpp  imaginaryclaw0x15ec.cpp  imaginarycube0x3c34.cpp  imaginarydrillfieldat0x22dc.cpp  imaginarydrillfieldat0x420.cpp  imaginarydrillfieldat0x498.cpp  imaginarygear0x4c8c.cpp  imaginarylever0x1d7c.cpp  imaginarynotion0x290.cpp  imaginaryplate0x770.cpp  imaginaryring0x3360.cpp  imaginaryruler0x2e60.cpp  imaginaryshape0x2b20.cpp  imaginarytool0x368.cpp  imaginarywrench0x23bc.cpp  legopiecelibrary.cpp  main.cpp  obscurecarousel0x78.cpp  obscureglyph0x21c.cpp  obscureicon0x1a8.cpp  obscurelink0x1c.cpp  obscuresigil0xdc.cpp  obscurevantage0x58.cpp  obscurezebra0xa4.cpp  opalhaven0xf4.cpp  (+13 more)
common/include/: amethystbreeze0x104.h  bronzedune0x4c.h  bronzedunebag0xc.h  cmbmodelpart.h  duskwindbananarelic0x24.h  floatyboat0x28.h  gdbvertexarray.h  golanimatedentity.h  golbinparser.h  golbmpfile.h  golboundedentity.h  golboundingvolume.h  golcamerabase.h  golconstants.h  golcpu.h  golddune0x38.h  golfileparser.h  golimgfile.h  gollist.h  golmateriallibrary.h  golmath.h  golmodelentity.h  golorientedentity.h  golscenenode.h  golstream.h  golsurface.h  golsurfaceformat.h  goltexture.h  goltexturepalette.h  goltgafile.h  goltransformbase.h  goltxtparser.h  golworldentity.h  golworldentitygroup0x38.h  jadeorbitbase0x10.h  mabmaterialanimation0x14.h  mabmaterialanimationitem0x18.h  mabmaterialanimationitem0x8.h  managedmaterialtable.h  silverdune0x30.h  (+1 more)
common/src/: amethystbreeze0x104.cpp  bronzedune0x4c.cpp  bronzedunebag0xc.cpp  cmbmodelpart.cpp  cmbmodelpartdata0x18.cpp  cmbmodelparttrackdata.cpp  duskwindbananarelic0x24.cpp  floatyboat0x28.cpp  golanimatedentity.cpp  golbillboard.cpp  golbinparser.cpp  golbmpfile.cpp  golboundingshape.cpp  golboundingvolume.cpp  golcamerabase.cpp  golddune0x38.cpp  goldecompress.cpp  goldirentry.cpp  golfileparser.cpp  golfilesource.cpp  golfontbase.cpp  golfsutil.cpp  golimgfile.cpp  golimgfilewriter.cpp  golmateriallibrary.cpp  golmath.cpp  golmodelbase.cpp  golmodelentity.cpp  golmodelmaterialtable.cpp  golmodelrenderstate.cpp  golnametable.cpp  golorientedentity.cpp  golrenderdevice.cpp  golscenenode.cpp  golstream.cpp  golsurface.cpp  golsurfaceformat.cpp  goltexture.cpp  goltexturepalette.cpp  goltgafile.cpp  (+13 more)
docs/: PORTING.md
miniwin/: CMakeLists.txt
reccmp/: goldp-function-size.csv  lego-racers-ascii.csv  lego-racers-floats.csv  lego-racers-function-size.csv
util/: compat.h  decomp.h
(+511 files in other folders)
